kubernetes/traefik/services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
    - port: 8080
      name: admin
  externalIPs:
  - 10.10.1.226
  selector:
    app: traefik
